--- a/myswapi/src/styles/components/card.css
+++ b/myswapi/src/styles/components/card.css
@@ -6,6 +6,11 @@
     justify-content: center;
   }
   
+  .imBlond{
+    font-family: "STARWARS", normal;
+    font-size: 1.0rem;
+  }
+  
   .myCard {
     position: relative;
     width: auto;
@@ -51,6 +56,11 @@
     height: 100px;
     border-radius: 50%;
   
+  }
+
+  .blo{
+    width: 30px;
+    height: 20px;
   }
 
   @media screen and (max-width: 768px){
