--- a/myswapi/src/styles/pages/swapi/main.css
+++ b/myswapi/src/styles/pages/swapi/main.css
@@ -34,3 +34,11 @@
     box-shadow: none;
   transform: scale(0.8);
 }
+
+.mainButtonsCont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
